[package]
name = "rs-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"